--- a/css/photo-gallery.css
+++ b/css/photo-gallery.css
@@ -1,30 +1,37 @@
-﻿.gallery {
+﻿main .col-xs-12 {
+	background-color: #f6f6f6;
+	padding: 20px 0;
+}
+
+.gallery {
 	position: relative;
-	margin: auto;
 }
 
 .gallery-images {
-	display: inline;
-	padding-left: 5px;
-	padding-right: 5px;
+	display: table;
+	margin: 0 auto;
 }
 
-.gallery-images img {
-	padding-left: 5px;
-	padding-right: 5px;
+.gallery-img {
+	display: none;
+	position: relative;
 }
 
-#scroll-left, #scroll-right {
+.scroll {
 	position: absolute;
+	padding: 10px;
 	top: 50%;
-	width: auto;
-	margin-top: -22px;
-	background-color: brown;
-	border-radius: 50px;
-	color: white;
+	background-color: #c4ad92;
+	color: black;
+	border: none;
 	font-weight: bold;
 	font-size: 18px;
-	transition: 0.6s ease;
+}
+
+.scroll:hover {
+	background-color: #d3ba9d;
+	color: black;
+	box-shadow: none;
 }
 
 #scroll-left {
@@ -35,13 +42,22 @@
 	right: 0;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-	animation-fill-mode: forwards;
+.selector {
+	text-align: center;
 }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.selector-icon {
+	display: inline-block;
+	margin: 20px 3px 0 3px;
+	height: 10px;
+	width: 10px;
+	border: 1px solid #c4ad92;
+	border-radius: 50%;
+	background-color: white;
+	cursor: pointer;
+}
+
+.active-select, .selector-icon:hover {
+	background-color: #c4ad92;
+	box-shadow: 0 0 3px #c4ad92;
 }
